0031920: Application Framework - speed up methods of getting label by entry and vice versa

// A method TDF_Data::AddLabel() is set Standard_EXPORT.

(cherry picked from commit 8f2e87bddeffea13156ca6b0d7a1ae7619403844)