src/TDF/TDF_Data.hxx
@@ -27,12 +27,12 @@
 #include <Standard_Transient.hxx>
 #include <TDF_Label.hxx>
 #include <Standard_OStream.hxx>
+#include <NCollection_DataMap.hxx>
 class Standard_NoMoreObject;
 class TDF_Transaction;
 class TDF_LabelNode;
 class TDF_Delta;
 class TDF_Label;
-
 
 class TDF_Data;
 DEFINE_STANDARD_HANDLE(TDF_Data, Standard_Transient)
@@ -100,6 +100,27 @@ Standard_OStream& operator<< (Standard_OStream& anOS) const
   //! returns modification mode.
     Standard_Boolean IsModificationAllowed() const;
   
+  //! Initializes a mechanism for fast access to the labels by their entries.
+  //! The fast access is useful for large documents and often access to the labels 
+  //! via entries. Internally, a table of entry - label icreated, 
+  //! which allows to obtain a label by its entry in a very fast way.
+  //! If the mechanism is turned off, the internal table is cleaned.
+  //! New labels are added to the table, if the mechanism is on
+  //! (no need to re-initialize the mechanism).
+  Standard_EXPORT void SetAccessByEntries (const Standard_Boolean aSet);
+
+  //! Returns a status of mechanism for fast access to the labels via entries.
+  Standard_EXPORT Standard_Boolean IsAccessByEntries() const;
+
+  //! Returns a label by an entry.
+  //! Returns Standard_False, if such a label doesn't exist
+  //! or mechanism for fast access to the label by entry is not initialized.
+  Standard_EXPORT Standard_Boolean GetLabel (const TCollection_AsciiString& anEntry, TDF_Label& aLabel);
+
+  //! An internal method. It is used internally on creation of new labels.
+  //! It adds a new label into internal table for fast access to the labels by entry.
+  Standard_EXPORT void AddLabel (const TDF_Label& aLabel);
+
   //! Returns TDF_HAllocator, which is an
   //! incremental allocator used by
   //! TDF_LabelNode.
@@ -198,8 +219,8 @@ private:
   TColStd_ListOfInteger myTimes;
   TDF_HAllocator myLabelNodeAllocator;
   Standard_Boolean myAllowModification;
-
-
+  Standard_Boolean myAccessByEntries;
+  NCollection_DataMap<TCollection_AsciiString, TDF_Label> myAccessByEntriesTable;
 };
 
 
